--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
     "express": "^4.21.1",
+    "express-session": "^1.18.1",
     "method-override": "^3.0.0",
     "mongoose": "^8.7.3",
     "nodemon": "^3.1.9"
