--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "license": "ISC",
   "description": "This project is the clone of airbnb clone website consist of similar functionality of the website",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
-    "express": "^4.21.1",
+    "express": "^4.21.2",
     "express-session": "^1.18.1",
     "method-override": "^3.0.0",
     "mongoose": "^8.7.3",
