--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs-mate": "^4.0.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "joi": "^17.13.3",
     "method-override": "^3.0.0",
     "mongoose": "^8.7.3",
     "nodemon": "^3.1.9"
