--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "This project is the clone of airbnb clone website consist of similar functionality of the website",
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.16.1",
     "cloudinary": "^1.21.0",
     "connect-flash": "^0.1.1",
     "dotenv": "^16.4.7",
@@ -20,6 +21,7 @@
     "joi": "^17.13.3",
     "method-override": "^3.0.0",
     "mongoose": "^8.7.3",
+    "mule": "^0.1.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.1.9"
